# ONScripter-EN-Official

./: .editorconfig  .gitignore  .gitmodules  AVIWrapper.cpp  AVIWrapper.h  AnimationInfo.h  BasicWindow.cpp  BasicWindow.h  Build.md  CMakeLists.txt  CMakePresets.json  CMake_Build.md  CsvHandler.cpp  CsvHandler.h  DirectReader.cpp  DirtyRect.h  Encoding.cpp  Encoding.h  FFMpegWrapper.cpp  FFMpegWrapper.h  FontInfo.cpp  FontInfo.h  LUAHandler.cpp  Layer.cpp  MadWrapper.cpp  MadWrapper.h  Makefile.onscripter  NsaReader.cpp  ONScripterLabel.cpp  ONScripterLabel.h  ONScripterLabel_command.cpp  ONScripterLabel_effect.cpp  ONScripterLabel_effect_breakup.cpp  ONScripterLabel_effect_trig.cpp  ONScripterLabel_event.cpp  ONScripterLabel_file.cpp  ONScripterLabel_image.cpp  ONScripterLabel_rmenu.cpp  ONScripterLabel_sound.cpp  ONScripterLabel_text.cpp  (+35 more)
.github/workflows/: build.yml  cmake-multi-platform.yml
SDLHelper_CD/: CMakeLists.txt  SDL_cdrom.h
SDLHelper_CD/cdrom/macosx/: CDPlayer.c
android-project/: AndroidManifest.xml  ids.txt  local.properties
android-project/amake/: Cargo.toml
android-project/amake/src/: main.rs
android-project/app/: build.gradle
cmake/: DependencyFinder.cmake  PkgConfigWrapper.cmake  ProjectVariablePreparation.cmake  ResourceGenerator.cmake  ResourceGenerator.ps1  ResourceGenerator.py
cmake/overlays/sdl2-mixer/: portfile.cmake
cmake/overlays/sdl2-mixer-ext/: portfile.cmake
extlib/: CMakeLists.txt
extlib/src/smpeg/: MPEG.cpp  MPEGsystem.cpp
extlib/src/smpeg/audio/: mpegtoraw.cpp
macosx/: cocoa_alertbox.mm  cocoa_directories.mm
macosx/SDL/: ONSApplication.m
msys2/: Makefile.Windows.MSYS2.i686.insani  Makefile.Windows.MSYS2.x86-64.insani
test/: CMakeLists.txt
tools/: CMakeLists.txt  arcconv.cpp  conv_shared.cpp
